--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -14,6 +14,14 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+
+    pluginManagement {
+      plugins {
+        id("com.android.application") version "8.9.0"
+        id("com.android.library") version "8.9.0"
+        id("org.jetbrains.kotlin.android") version "2.1.0"
+      }
+    } 
 }
 
 plugins {
