--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLSchemes</key>z
+        <array>
+          <!-- 例：com.googleusercontent.apps.1234567890-abcdefg -->
+          <string>你的_iOS_客戶端_REVERSED_CLIENT_ID</string>
+        </array>
+      </dict>
+    </array>
+
 </dict>
 </plist>
