--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  flutter_dotenv: ^6.0.0
     
   fl_chart: ^1.0.0
   url_launcher: ^6.3.0
   flutter_launcher_icons: ^0.14.4
+
+  google_sign_in: ^7.1.1
+  http: ^1.5.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
+  dio: ^5.0.0
+  dio_cache_interceptor: ^4.0.3
 
 flutter_launcher_icons:
   android: true
@@ -27,9 +36,13 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.8
+  freezed: ^2.5.7
+  json_serializable: ^6.7.1
 
 flutter:
   assets:
     - assets/
+    - .env
   uses-material-design: true
   
