--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -17,17 +17,18 @@ pluginManagement {
 
     pluginManagement {
       plugins {
-        id("com.android.application") version "8.9.0"
-        id("com.android.library") version "8.9.0"
-        id("org.jetbrains.kotlin.android") version "2.1.0"
+          id("com.android.application") version "8.13.0" apply false
+          id("com.android.library") version "8.13.0" apply false
+          id("org.jetbrains.kotlin.android") version "2.1.20" apply false
       }
     } 
 }
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.1.1" apply false      // ← 升級
-    id "org.jetbrains.kotlin.android" version "1.9.22" apply false // ← 升級
+    id 'com.android.application' version '8.13.0' apply false
+    id 'com.android.library' version '8.13.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.1.20' apply false
 }
 
 include ":app"
