--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,16 @@ dependencies:
   fl_chart: ^1.0.0
   url_launcher: ^6.3.0
   flutter_launcher_icons: ^0.14.4
+  collection: ^1.19.1
 
   google_sign_in: ^7.1.1
   http: ^1.5.0
-  freezed_annotation: ^2.4.1
+  freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   dio: ^5.0.0
   dio_cache_interceptor: ^4.0.3
+  provider: ^6.1.5+1
+  intl: ^0.20.2
 
 flutter_launcher_icons:
   android: true
@@ -35,9 +38,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.4.8
-  freezed: ^2.5.7
+  freezed: ^3.2.3
   json_serializable: ^6.7.1
 
 flutter:
